Fix Orbit UI hiding on small

--- a/scss/foundation/components/_orbit.scss
+++ b/scss/foundation/components/_orbit.scss
@@ -348,10 +348,7 @@ $orbit-timer-hide-for-small: true !default;
           margin:0% !important;
           opacity:1 !important;
         }
-        .orbit-timer,
-        .orbit-next,
-        .orbit-prev,
-        .orbit-bullets,
+
         .orbit-slide-number {
           display: none;
         }
